<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <TextView
        android:id="@+id/topBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@android:color/white"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="2sp"
        app:autoSizeMaxTextSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menuBar"
        android:background="@color/colorPrimaryDark"/>

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_arrow_back_ios_24px"
        app:layout_constraintEnd_toEndOf="@id/backArrowEnd"
        app:layout_constraintStart_toStartOf="@id/backArrowStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menuBar"
        />

    <TextView
        android:id="@+id/Requests"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/green"
        android:text="@string/requests"
        android:maxLines="1"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingTop="1dp"
        android:paddingBottom="1dp"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="2sp"
        app:autoSizeMaxTextSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/addEnd"
        app:layout_constraintStart_toStartOf="@id/addStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menuBar"
        android:background="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/friendSearch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:hint="@string/friendSearch"
        android:background="@android:color/white"
        android:paddingLeft="2sp"
        app:layout_constraintTop_toTopOf="@id/searchBarTop"
        app:layout_constraintBottom_toBottomOf="@id/searchBarBottom"
        app:layout_constraintStart_toStartOf="@id/backArrowStart"
        app:layout_constraintEnd_toEndOf="@id/addStart"/>

    <TextView
        android:id="@+id/searchIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Search"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="2sp"
        app:autoSizeMaxTextSize="30sp"
        android:maxLines="1"
        android:textStyle="bold"
        android:textColor="@color/green"
        android:gravity="center"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/addStart"
        app:layout_constraintTop_toTopOf="@id/friendSearch"
        app:layout_constraintBottom_toBottomOf="@id/friendSearch"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/friendSearch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/friendTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="Search"
        android:gravity="center"
        android:textColor="@color/green"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="2sp"
        app:autoSizeMaxTextSize="40sp"
        app:layout_constraintEnd_toEndOf="@id/addStart"
        app:layout_constraintStart_toStartOf="@id/backArrowEnd"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/menuBar"
        android:background="@color/colorPrimaryDark"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backArrowStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menuBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/searchBarTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/searchBarBottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.09"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backArrowEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addStart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/addEnd"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        />


</androidx.constraintlayout.widget.ConstraintLayout>